--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
     <!-- 集中定义版本号 -->
     <properties>
       <junit.version>4.12</junit.version>
-      <spring.version>4.2.4.RELEASE</spring.version>
+      <spring.version>5.1.5.RELEASE</spring.version>
       <mybatis.version>3.2.7</mybatis.version>
       <mybatis.spring.version>1.2.2</mybatis.spring.version>
       <mybatis.paginator.version>1.2.15</mybatis.paginator.version>
@@ -95,23 +95,34 @@
       <swagger.version>2.4.0</swagger.version>
       <poi.version>3.8</poi.version>
       <junit.version>4.12</junit.version>
-      <!-- html视图解析 -->
       <freemarker.version>2.3.22</freemarker.version>
       <lombok.version>1.18.8</lombok.version>
       <validation-api.version>2.0.1.Final</validation-api.version>
+      <hibernate-validator.version>5.1.0.Final</hibernate-validator.version>
+      <javax.el-api.version>3.0.0</javax.el-api.version>
     </properties>
 
     <dependencies>
+      <dependency>
+        <groupId>taglibs</groupId>
+        <artifactId>standard</artifactId>
+        <version>1.1.2</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>${hibernate-validator.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.el</groupId>
+        <artifactId>javax.el-api</artifactId>
+        <version>${javax.el-api.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <version>${lombok.version}</version>
         <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>javax.validation</groupId>
-        <artifactId>validation-api</artifactId>
-        <version>${validation-api.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
